drupal/sites/all/themes/eenterprise/sass/styles.scss
/* ... */
span.report-name, 
span.subpart-name,
span.item-subscript-text,
span.date-subscript-text {
	display: block;
}
span.subpart-name {
	color: $ee-dark-gray;
}
a:hover span.subpart-name {
	color: #fff;
}
span.subpart-name,
span.date-subscript-text,
span.item-subscript-text,
.simple-dialog {
	font-weight: normal;
	font-size: 0.75em;
}
span.date-subscript-text,
span.item-subscript-text,
.simple-dialog {
	margin-top:10px;
	display:inline-block;
	text-transform: uppercase;
}

td.views-field-counter,
td.views-field-field-prog-track-domain,
td.views-field-field-prog-track-status,
td.views-field-field-prog-track-updated,
td.views-field-field-prog-track-actions,
td.views-field-field-prog-track-actions-link,
td.views-field-field-todo-lst-domain,
td.views-field-field-todo-lst-due {
	font-weight:normal;
}

td.views-field-field-prog-tracker-app {
	font-weight: bold;
	.item-subscript-text {
		font-weight: normal;
	}
}
th.views-field-counter,
td.views-field-counter,
td.views-field-field-prog-track-domain,
td.views-field-field-prog-track-status,
td.views-field-field-prog-track-updated,
td.views-field-field-todo-lst-domain,
td.views-field-field-todo-lst-due {
	text-align: center;
}
tr.even {
	background-color: $ee-light-gray;
}

.views-field-field-prog-track-updated .date-subscript-text,
.views-field-field-prog-tracker-app .item-subscript-text {
    font-size:67.5%;
}
.views-field-field-prog-tracker-app .modal-content-in-page,
.views-field-field-prog-track-status .modal-content-in-page,
.views-field-field-todo-lst-item .modal-content-in-page {
    display:none;
}

.modal-content-in-page {
	.helpdesk-message {
		margin-top: 30px;
	}
	span.modal-label {
	  color: $ee-dark-gray;
	  font-size: 0.75em;
	  display: block;
	  line-height: 1.2;
	  margin-top: 10px;
	}
}

.task-filter ul {
    list-style-type:none;
    margin:0 0 1em 0;
    padding:0;
    display:inline-block;
}

.task-filter ul li {
    float:left;
    margin: 0 1em 0 0;
    padding:0.5em 1em;
    background:#585858;
    color:#FFFFFF;
    border-radius: 4px;
}

.task-filter ul li a {
    color:#FFFFFF;
}

.task-filter ul li.active {
    background:#006545;
}

.task-filter ul li:hover {
    background:#006545;
}

.table-result-count {
    display:inline-block;
    margin:0 1em 0 0;
    text-align:right;
    width:100%;
}

/** Profile Styles *********************************************************/
@media screen and (max-width: 40em) {
	.region-footer {
		.pipeline > li {
			margin-top: 5px;
			margin-bottom: 5px;
		}
	}
	
	.site-name-and-slogan {
		width: 100%;
	}
	.simple-main-nav {
	// Hide simple-main-nav at widths below 40em, when mobile-nav shows
	display: none;
	}
	form[id^='user-profile-form'] {
		.form-type-textfield {
			width: 150px;
			min-width: 140px;
		}
		.ajax-progress .message {
			display: none;
		}
		#field-zip-code-values .field_zip_code {
			width: 200px;
		}
	}
}

#favorites-edit-profile {
	font-size: 0.85em;
}

.field-name-field-profile-first-name,
.field-name-field-profile-last-name {
	display:inline-block;
}
form tbody {
	border-top: none;
}
.glyphicon-star.star-example {
	color: #f00;
}
.glyphicon-info-sign {
	color: #337ab7;
}
/* ... */

